<resources>
    <string name="app_name">MajorProjectV2</string>

    <string name="adsearn"><b>Ads</b>Earn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_register_here"><u>or Register Here</u></string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="view">View</string>
    <string name="publish">Publish</string>
    <string name="majorprojectversion1">MajorProjectV1\nRegister</string>
    <string name="phone">Phone</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register_here">register here</string>
    <string name="upload">upload</string>
    <string name="see_all">view all</string>
    <string name="enter_title_of_ad">Enter the title of Ad</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="enter_the_question">Enter the question</string>
    <string name="home">Home</string>
    <string name="Ads">Ads</string>

</resources>